# foreapere-backend-rust

./: Cargo.toml  README.md  db.drawio
src/: main.rs
src/server/: mod.rs
src/server/handler/: mod.rs
