[package]
name = "foreapere-backend-rust"
version = "0.1.0"
authors = ["soheyHashimoto <heyso1209@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
diesel = { version = "1.4.8", features = ["mysql", "r2d2"]}
dotenv = "0.13.0"